--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "slugify": "^1.6.6",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "xss": "^1.0.15",
     "zod": "^3.23.8"
   },
   "devDependencies": {
